新增gc , heapdump  参数，监控JVM 指标